fix: horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   font-weight: 400;
   margin: 0 auto;
   padding: 0 auto;
+  overflow-x: hidden;
 }
 
 .container1 {
